--- a/src/components/iconTextList/iconTextList.scss
+++ b/src/components/iconTextList/iconTextList.scss
@@ -1,11 +1,13 @@
-@import '../../styles/global';
+@import "../../styles/global";
 
 .iconTextList {
   width: 280px;
+
   &__item {
     margin-bottom: 20px;
   }
+
   &__item:last-child {
-    margin-bottom: 0px;
+    margin-bottom: 0;
   }
 }
