--- a/src/components/likeButton/likeButton.scss
+++ b/src/components/likeButton/likeButton.scss
@@ -1,25 +1,31 @@
-@import '../../styles/global';
+@import "../../styles/global";
+
 .likeButton {
   width: 40px;
   height: 20px;
   border: 1px solid $dark25;
   border-radius: 10px;
   cursor: pointer;
+
   &__clicked {
     border: 1px solid #bc9cff;
+
     & .likeButton__icon {
       font-size: 10px;
       color: #bc9cff;
     }
+
     & .likeButton__number {
       color: #bc9cff;
     }
   }
+
   &__icon {
     font-size: 10px;
     color: $dark25;
     transform: translate(5px, -3px);
   }
+
   &__number {
     display: inline-block;
     font-weight: 400;
