--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -3,11 +3,21 @@
 .login {
   width: 380px;
   height: 358px;
-  background: #ffffff;
-  border: 1px solid rgba(0, 0, 0, 0.12);
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
+  background: #fff;
+  border: 1px solid rgb(0 0 0 / 12%);
+  box-shadow: 0 0 25px rgb(0 0 0 / 20%);
   border-radius: 4px;
-  padding: 23px 30px 30px 30px;
+  padding: 23px 30px 30px;
+
+  @media (max-width: 380px) {
+    width: 100%;
+    padding: 23px 10px 30px;
+  }
+
+  @media (max-width: 330px) {
+    padding: 23px 0px 30px;
+  }
+
   &__header {
     & h1 {
       font-weight: 700;
@@ -16,23 +26,29 @@
       color: $dark100;
     }
   }
+
   &__email {
     margin-top: 21px;
   }
+
   &__password {
     margin-top: 10px;
   }
+
   &__buttonIn {
     margin-top: 20px;
   }
+
   &__hasAccount {
     display: flex;
     justify-content: space-between;
     margin-top: 30px;
   }
+
   &__text {
     transform: translateY(9px);
   }
+
   &__buttonCreate {
   }
 }
