--- a/src/components/UI-kit/colorBlock/colorBlock.scss
+++ b/src/components/UI-kit/colorBlock/colorBlock.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/_global.scss';
+@import "../../../styles/_global.scss";
 
 .colorBlock__item {
   display: flex;
@@ -7,7 +7,7 @@
 }
 
 .colorBlock__title {
-  margin: 10px 0 0 0;
+  margin: 10px 0 0;
   font-weight: 700;
   font-size: 19px;
 }
