--- a/src/components/comment/comment.scss
+++ b/src/components/comment/comment.scss
@@ -1,23 +1,28 @@
-@import '../../styles/global';
+@import "../../styles/global";
 
 .comment {
   padding: 10px 0 0 4px;
+
   &__top {
     height: 48px;
     display: flex;
     flex-direction: row;
     margin-bottom: 8px;
   }
+
   &__photo {
     width: 48px;
     height: 48px;
     margin-right: 9px;
     transform: translate(-23px, -13px);
+
     & img {
     }
   }
+
   &__header {
   }
+
   &__title {
     margin-left: 5px;
     font-weight: 700;
@@ -26,6 +31,7 @@
     color: $dark75;
     transform: translate(-7px, 1px);
   }
+
   &__date {
     font-weight: 400;
     font-size: 14px;
@@ -33,14 +39,17 @@
     color: $dark75;
     transform: translate(-3px, 5px);
   }
+
   &__bottom {
     height: 72px;
     display: flex;
     flex-direction: row;
   }
+
   &__likeButton {
     margin: 2px 14px 0 1px;
   }
+
   &__text {
     font-weight: 400;
     font-size: 14px;
