--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -1,38 +1,44 @@
-@import '../../styles/global';
+@import "../../styles/global";
 
 .dropdown {
   position: relative;
+
   &__field {
     width: 320px;
     height: 43px;
-    background: #ffffff;
+    background: #fff;
     border: 1px solid $dark25;
     padding: 7px 0 8px 14px;
     border-radius: 4px;
     display: flex;
     justify-content: space-between;
     cursor: pointer;
+
     &--active {
       border-bottom-left-radius: 0 !important;
       border-bottom-right-radius: 0 !important;
     }
+
     &::placeholder {
       color: $dark75;
       font-weight: 400;
       font-size: 14px;
     }
+
     &:hover,
     &:focus {
       border-color: $dark50;
       outline: none;
     }
   }
+
   &__text {
     color: $dark75;
     font-weight: 400;
     font-size: 14px;
     transform: translateY(-3px);
   }
+
   &__title {
     font-weight: 700;
     font-size: 12px;
@@ -40,30 +46,36 @@
     text-transform: uppercase;
     color: $dark100;
   }
+
   &__arrow {
     position: absolute;
     top: 10px;
     right: 10px;
     cursor: pointer;
+
     // &--small {
     //   right: 64px;
     // }
   }
+
   &__bottomField {
     position: absolute;
     width: 320px;
-    background: #ffffff;
+    background: #fff;
     border: 1px solid $dark50;
-    box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+    box-shadow: 0 10px 20px rgb(31 32 65 / 5%);
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
     padding: 7px 7px 0 15px;
     z-index: 2;
+
     &--none {
       display: none;
     }
+
     & ul {
-      padding: 5px 0 2px 0;
+      padding: 5px 0 2px;
+
       li {
         display: flex;
         justify-content: space-between;
@@ -72,12 +84,14 @@
       }
     }
   }
+
   &__counter {
     display: flex;
     width: 92px;
     justify-content: space-between;
     transform: translateY(-6px);
   }
+
   &__circle {
     display: flex;
     justify-content: center;
@@ -91,11 +105,13 @@
     cursor: pointer;
     transform: translateX(1px);
     user-select: none;
+
     &--none {
       border: 1px solid $dark25;
       cursor: auto;
     }
   }
+
   &__count {
     font-weight: 700;
     font-size: 12px;
@@ -103,10 +119,12 @@
     text-transform: uppercase;
     text-align: center;
     transform: translate(1px, 1px);
+
     &--none {
       color: $dark25;
     }
   }
+
   &__buttons {
     display: flex;
     justify-content: space-between;
@@ -116,6 +134,7 @@
   &__furniture {
     width: 266px;
   }
+
   &__main {
     position: relative;
   }
