--- a/src/components/iconTextItem/iconTextItem.scss
+++ b/src/components/iconTextItem/iconTextItem.scss
@@ -1,22 +1,25 @@
-@import '../../styles/global';
+@import "../../styles/global";
 
 .iconTextItem {
   width: 280px;
   display: flex;
   align-items: center;
-  border-bottom: 1px solid rgba(31, 32, 65, 0.1);
+  border-bottom: 1px solid rgb(31 32 65 / 10%);
   padding-bottom: 20px;
+
   &__icon {
     font-size: 48px;
     color: #bc9cff;
     margin-right: 10px;
   }
+
   &__text {
     font-weight: 400;
     font-size: 14px;
     line-height: 24px;
     transform: translateY(3px);
   }
+
   &__title {
     font-weight: 700;
     font-size: 14px;
