--- a/src/components/room/room.scss
+++ b/src/components/room/room.scss
@@ -1,12 +1,13 @@
-@import '../../styles/global';
+@import "../../styles/global";
 
 .room {
   width: 270px;
   height: 257px;
-  box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+  box-shadow: 0 10px 20px rgb(31 32 65 / 5%);
   border-radius: 4px;
   background: #fff;
   overflow: hidden;
+
   &__top {
     height: 151px;
   }
@@ -15,20 +16,24 @@
     width: 270px;
     height: 154px;
     overflow: hidden;
+
     & .swiper-horizontal > .swiper-pagination-bullets,
     .swiper-pagination-bullets.swiper-pagination-horizontal,
     .swiper-pagination-custom,
     .swiper-pagination-fraction {
       left: 99px;
     }
+
     & .swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
     .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
       margin: 0 4px;
       margin: 0 var(--swiper-pagination-bullet-horizontal-gap, 2px);
     }
+
     &-pagination {
       top: 118px;
     }
+
     &-pagination-bullet {
       width: 7px;
       width: var(--swiper-pagination-bullet-width, var(--swiper-pagination-bullet-size, 7px));
@@ -36,10 +41,12 @@
       height: var(--swiper-pagination-bullet-height, var(--swiper-pagination-bullet-size, 7px));
       border: 1px solid #fff;
       background: none;
+
       &-active {
         background: #fff;
       }
     }
+
     &-slide {
     }
   }
@@ -47,16 +54,20 @@
   &__bot {
     padding: 19px 20px;
   }
+
   &__info {
     margin-top: 3px;
   }
+
   &__score {
     display: flex;
     justify-content: space-between;
     padding-top: 7px;
   }
+
   &__stars {
   }
+
   &__review {
     & span:first-child {
       font-weight: 700;
@@ -64,6 +75,7 @@
       line-height: 18px;
       color: $dark50;
     }
+
     & span:last-child {
       font-weight: 400;
       font-size: 14px;
@@ -92,13 +104,13 @@
 .swiper:hover .swiper-button-next,
 .swiper:hover .swiper-button-prev {
   opacity: 1;
-  background: linear-gradient(
-    90deg,
-    rgba(0, 0, 0, 0.5) 0%,
-    rgba(0, 0, 0, 0) 99.99%,
-    rgba(255, 255, 255, 0) 100%
-  );
-
+  background:
+    linear-gradient(
+      90deg,
+      rgb(0 0 0 / 50%) 0%,
+      rgb(0 0 0 / 0%) 99.99%,
+      rgb(255 255 255 / 0%) 100%
+    );
   color: #fff;
 }
 
@@ -120,12 +132,14 @@
   cursor: auto;
   pointer-events: none;
 }
+
 .swiper-navigation-disabled .swiper-button-next,
 .swiper-navigation-disabled .swiper-button-prev {
   display: none !important;
 }
-.swiper-button-next:after,
-.swiper-button-prev:after {
+
+.swiper-button-next::after,
+.swiper-button-prev::after {
   font-family: swiper-icons;
   font-size: var(--swiper-navigation-size);
   text-transform: none !important;
@@ -133,25 +147,29 @@
   font-variant: initial;
   line-height: 1;
 }
+
 .swiper-button-prev,
 .swiper-rtl .swiper-button-next {
   left: 0;
   top: 0;
   right: auto;
 }
-.swiper-button-prev:after,
-.swiper-rtl .swiper-button-next:after {
-  content: 'prev';
+
+.swiper-button-prev::after,
+.swiper-rtl .swiper-button-next::after {
+  content: "prev";
 }
+
 .swiper-button-next,
 .swiper-rtl .swiper-button-prev {
   right: 0;
   top: 0;
   left: auto;
 }
-.swiper-button-next:after,
-.swiper-rtl .swiper-button-prev:after {
-  content: 'next';
+
+.swiper-button-next::after,
+.swiper-rtl .swiper-button-prev::after {
+  content: "next";
 }
 
 .swiper-button-next {
