--- a/src/components/textField/textField.scss
+++ b/src/components/textField/textField.scss
@@ -1,15 +1,18 @@
-@import '../../styles/global';
+@import "../../styles/global";
 
 .textField {
   position: relative;
   max-width: 320px;
+
   &__top {
     display: flex;
     justify-content: space-between;
+
     &--small {
       width: 266px;
     }
   }
+
   &__small {
     width: 266px;
   }
@@ -39,28 +42,34 @@
     color: $dark75;
     letter-spacing: -0.05px;
     word-spacing: -1px;
+
     &::placeholder {
       font-weight: 400;
       font-size: 14px;
       color: $dark25;
     }
+
     &:hover,
     &:focus {
       border: 1px solid $dark50;
       outline: none;
     }
+
     &:read-only {
       cursor: pointer;
     }
+
     &--small {
       width: 266px;
     }
   }
+
   &__arrow {
     position: absolute;
     top: 34px;
     right: 63px;
     color: $purple;
+
     &--small {
       right: 10px;
     }
