--- a/src/pages/loginPage/loginPage.scss
+++ b/src/pages/loginPage/loginPage.scss
@@ -7,6 +7,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  @media (max-width: 1380px) {
+    width: 100%;
+  }
 
   &__loginForm {
     // margin-top: 163px;
