--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,14 +1,14 @@
 $dark100: #1f2041;
-$dark75: rgba(31, 32, 65, 0.75);
-$dark50: rgba(31, 32, 65, 0.5);
-$dark25: rgba(31, 32, 65, 0.25);
-$dark5: rgba(31, 32, 65, 0.05);
+$dark75: rgb(31 32 65 / 75%);
+$dark50: rgb(31 32 65 / 50%);
+$dark25: rgb(31 32 65 / 25%);
+$dark5: rgb(31 32 65 / 5%);
 $purple: #bc9cff;
 $green: #6fcf97;
 
 * {
   box-sizing: border-box;
-  font-family: 'Montserrat';
+  font-family: Montserrat;
   color: $dark100;
 }
 
@@ -17,11 +17,10 @@ body {
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
-  color: rgba(31, 32, 65, 0.75);
 }
 
 h1 {
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  text-shadow: 0 4px 4px rgb(0 0 0 / 25%);
   font-weight: 700;
   font-size: 24px;
   line-height: 29px;
